# ALICE_final

./: .env  .env.example  .gitattributes  .gitignore  BLOG.md  Dockerfile  LICENSE  LINKS.md  PROGRESS.md  PROJECT_STRUCTURE.md  README.md  alice_env_leaderboard_tmp.py  alice_server.py  client.py  openenv.yaml  pyproject.toml
alice_env/: Dockerfile  LINKS.md  README.md  __init__.py  alice_server.py  models.py  openenv.yaml  pyproject.toml  server.py
alice_env/dashboard/: gradio_app.py
alice_env/environment/: __init__.py  failure_bank.py  leaderboard.py  oracle_interface.py  state.py  task_generator.py  verifier_stack.py
alice_env/monitors/: __init__.py  entropy_monitor.py  sandbox.py  trajectory_sampler.py
alice_env/notebooks/: alice_full_colab.ipynb  alice_standalone_colab.ipynb  train_trl_colab.ipynb  train_unsloth_colab.ipynb
alice_env/scripts/: deploy_spaces.sh  launch_hf_job.py
alice_env/server/: alice_env_environment.py  app.py
alice_env/tests/: test_integration.py
dashboard/: __init__.py  gradio_app.py
environment/: curriculum_manager.py  episode_handler.py  failure_bank.py  leaderboard.py  reward_function.py  task_generator.py  verifier_stack.py
notebooks/: alice_full_colab.ipynb  train_trl_colab.ipynb
openenv_alice_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: deploy_spaces.sh  launch_hf_job.py  launch_training.sh  verify_spaces.sh
server/: Dockerfile  __init__.py
tests/: __init__.py  test_properties.py  test_server.py
training/: __init__.py  hf_cpu_job.py  hf_job_train.py  train.py  train_trl.py  train_unsloth.py
